# ticket_guys_b_team

./: .gitignore  AGENTS.md  README.md  pyproject.toml  ticket_guys_b_team.code-workspace  zip_agent_docs.sh
.codex/: config.toml
.codex/agents/: plan-researcher.toml  plan-reviewer.toml  plan-writer.toml
.codex/prompts/: integration.md  review.md  root.md  worker.md
dev_scripts/: fanout-file-codex.sh  fanout_apply_oracle_to_implements.sh  fanout_codex_exec.py  fanout_create_repo_local_skill.sh  fanout_update_oracle_docs_routing.sh
doc/: cli_contract.md  codex_cli_wrapper.md  file_format.md  product_vision.md  spec.md  spec_overview.md  state_machine.md
doc/spec/: cli_contract.md  codex_cli_wrapper.md  file_format.md  product_vision.md  spec_overview.md  state_machine.md  state_write_protocol.md
doc/task/: codex_self_improvement.md  implementation.md  research.md
doc/tech/: dev_environment.md  python.md  test_policy.md
docs/: ROUTING.md  dev_environment.md  python.md  test_policy.md
docs/spec/: cli_contract.md  codex_cli_wrapper.md  codex_worker_instructions.md  common_invariants.md  file_format.md  operational_artifacts.md  product_vision.md  spec_overview.md  state_machine.md  state_write_protocol.md
docs/task/: implementation.md  research.md
memo/: todo.md  知識システム設計.md
oracle/: ROUTING.md  document_routing.md  oracle.md  subcmd_codex_cli_profile.md  test-policy.md
oracle/dev_rule/: ROUTING.md  (+7 more)
src/: codex_common.py  codex_wrapper.py  env_runtime.py  env_service.py  main.py  plan_drafting.py  plan_service.py  state_io.py
tests/: test_main.py
(+141 files in other folders)
