[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-guy-b-team"
version = "0.1.0"
description = "Minimal bootstrap for ticket_guy_b_team"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pyright>=1.1.397",
    "pytest>=8.3.5",
]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.package-dir]
"" = "src"
