[build-system]
requires = ["setuptools>=45", "wheel"]

[project]
name = "ticket-guy-b-team"
readme = "README.md"
license = {file = "LICENSE"}
urls = {repository = "https://github.com/Nu-Pan/ticket_guys_b_team"}

dynamic = ["version"]
requires-python = ">=3.12"

dependencies = [
    "PyYAML>=6.0.0",
    "typer",
]

[tool.setuptools.package-dir]
ticket-guy-b-team = "src"

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pyright>=1.1.397",
]
